--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <section class="screen">0</section>
         <section class="calc-buttons-row">
-            <button class="calc-button-double">C</button>
+            <button class="calc-button double">C</button>
             <button class="calc-button">&larr;</button>
             <button class="calc-button">&div;</button>
         </section>
@@ -40,7 +40,7 @@
         </section>
 
         <section class="calc-buttons-row">
-            <button class="calc-button-triple">0</button>
+            <button class="calc-button triple">0</button>
             <button class="calc-button">&equals;</button>
         </section>
     
